index.css
:root {
  --tokyonight-storm-bg: #24283b;
  --tokyonight-storm-fg: #c0caf5;

  --tokyonight-storm-black: #1d202f;
  --tokyonight-storm-red: #f7768e;
  --tokyonight-storm-green: #9ece6a;
  --tokyonight-storm-yellow: #e0af68;
  --tokyonight-storm-blue: #7aa2f7;
  --tokyonight-storm-magenta: #bb9af7;
  --tokyonight-storm-cyan: #7dcfff;
  --tokyonight-storm-white: #a9b1d6;
}

@font-face {
  font-family: "JetBrains Mono";
  src: url("/fonts/jetbrainsmono/JetBrainsMono-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

body {
  background-color: var(--tokyonight-storm-bg);
  color: var(--tokyonight-storm-fg);

  font-family: "JetBrains Mono", monospace;
}

p {
  color: var(--tokyonight-storm-white);
}

a {
  color: var(--tokyonight-storm-blue);
}

